--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,4 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 add_executable(server ./src/server.cpp)
 add_executable(client ./src/client.cpp)
+add_executable(serverEventLoop ./src/serverEventLoop.cpp)
