--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,13 @@ add_subdirectory(src/dataStructures)
 add_executable(server ./src/server.cpp)
 add_executable(client ./src/client.cpp)
 add_executable(serverEventLoop ./src/serverEventLoop.cpp)
+add_executable(testAvl ./src/dataStructures/testAvl.cpp)
 target_include_directories(serverEventLoop PUBLIC
                           "$build"
                           "$src/dataStructures"
                           )
 target_link_libraries(serverEventLoop PUBLIC HashTable)
 target_link_libraries(serverEventLoop PUBLIC AvlTree)
+target_link_libraries(testAvl PUBLIC AvlTree)
+
 
